src/cmd/go/testdata/src/syntaxerror/x_test.go
package p

func f() (x.y, z int) {
}
